[metadata]
name = charm-test
summary = Helpers for unit-testing Juju charms
home-page = https://github.com/freeekanayaka/charm-test
description = README.md
     Please see the `GitHub project page
     <https://github.com/freeekanayaka/charm-test/>`_
    for documentation.
author = Free Ekanayaka
author-email = free.ekanayaka@gmail.com
classifier =
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Python :: 3

[files]
packages = charm-test

[bdist_wheel]
universal = 1
