[metadata]
name = charm-test
summary = Helpers for unit-testing Juju charms
home-page = https://github.com/freeekanayaka/charm-test
description-file = README.rst
author = Free Ekanayaka
author-email = free.ekanayaka@gmail.com
license = MIT
platform = POSIX
classifier =
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: POSIX
    Programming Language :: Python :: 3

[files]
packages = charmtest

[extras]
test =
    coverage>=4.2
docs =
     sphinx

[bdist_wheel]
universal = 1

[build_sphinx]
source-dir = docs/
build-dir  = docs/_build
all_files  = 1

[upload_sphinx]
upload-dir = docs/_build/html
